minor styling improvement (prevent game containers to be cropped by footer)

--- a/src/main/resources/public/css/view.css
+++ b/src/main/resources/public/css/view.css
@@ -73,7 +73,7 @@
 }
 
 .booster-container {
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 .cards-container {
